# vc-scout-agent

./: .env.example  .gitignore  README.md  pyproject.toml  quick_start.py  requirements.txt
backend/: agent.py  main.py  sources.json  tools.py
frontend/: index.html
src/vc_scout_agent/: __init__.py  main.py
src/vc_scout_agent/agents/: __init__.py  scout_agents.py
src/vc_scout_agent/config/: settings.py
src/vc_scout_agent/tools/: __init__.py  exa_search.py
src/vc_scout_agent/workflows/: __init__.py  founder_scout_crew.py
